--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,51 @@
+html{
+    font-size: 62.5%;
+}
 body{
     font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
 }
 
-
-
-.container{
+.header{
     display: flex;
     justify-content: space-between;
-    padding: 20px 40px;
     align-items: center;
+    padding: 45px;
     min-height: 75px;
     max-height: 100vh;
-   
 }
 
-.container .logo{
-    display: flex;
-    font-weight: 800;
-    font-size: 20px;
-    color: #000000;
-}
-
-nav ul{
-    position:static;
+.logo{
     display: flex;
     align-items: center;
 }
 
-
-ul a{
-    font-size: 15px;
-    font-weight: 400px;
-    color: #000000;
-    padding: 15px 10px;
-    margin-left: 4px;
+.logo h1{
+    font-size: 2rem;
+    margin-left: 5px;
 }
 
-
-nav ul li a:hover{
-    color: #ffffff;
-    background-color: #5BC241;
-    transition: 0.3s;
+.menu{
+    display: flex;
+    align-items: center;
 }
 
-ul a.cadastra-se{
-    background-color:#5BC241;
-    border-radius: 10px;
-}
-
-@media(max-width: 747px){
-   .container{
-    display: block;
-    position: absolute;
-    text-align: center;
-    width: 375px;
-    height: 800px;
-
-   }
-
-   .container .logo{
-    display: inline-flex;
+.menu li a{
     padding: 10px 5px;
-   }
+    transition: 0.3s ease-in-out;
+    margin-left: 1.5rem;
+    font-size: 1.5rem;
+}
 
+.menu li a:hover{
+    background-color: #5BC241
+    color #ffffff;
+}
 
-   nav ul{
-    display: block;
-    font-size: 40px;
-   }
-
-   li a{
-    display: block;
-    margin: 0;
-   }
-
-
-
-
+.menu li a.btn{
+    background-color: #5BC241;
+    border-radius: 1rem;
+    color: #ffffff;
+    margin-left: 3rem;
+    padding: 10px 20px;
 }
